--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-color: #2a2139;
     color: #f8f8f2;
     font-family: 'Roboto Mono', monospace;
+    width: 960px;
+    margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
